--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <body>
+    <title>Hello World</title>
+    <h1>Hello, Code School!</h1>
 
+    <ul>
+      <li>HaX0R</li>
+      <li>C0de</li>
+
+
+    </ul>
   </body>
 </html>
